--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,33 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
-    "module": "ESNext",
-    "declaration": true,
-    "outDir": "./dist",
+    "lib": [
+      "ES2022"
+    ],
     "strict": true,
+    "allowJs": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
+    "target": "ES2022",
+    "baseUrl": ".",
+    "noEmit": true,
+    "rootDir": "./src",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "removeComments": true,
   },
   "include": [
-    "src"
-  ]
+    "src/**/*",
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ],
 }
